Data reset while moving from next or previous button

--- a/tcm/modules/web/src/main/webapp/pages/custody/td/acctholder.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/acctholder.xhtml
@@ -121,7 +121,7 @@
 
             <p:commandLink styleClass="UI-nextButtonFA Fright UI-tcmButton"
                            actionListener="#{tdcto.nextPage}"
-                           update=":ctoForm:tdaccordian"/>
+                           update=":ctoForm:tdaccordian" process=":ctoForm:tdaccordian:accHolderTabV"/>
         </div>
         </div>
         
@@ -238,13 +238,13 @@
 
             </div>
             <div class="Container100 MarTop20" style="margin: 10px 10px;">
-            <p:commandLink styleClass="UI-prevButtonFA Fleft"
-                           actionListener="#{tdcto.prevPage}"
-                           update=":ctoForm:tdaccordian"  process="@this"/>
+                <p:commandLink styleClass="UI-prevButtonFA Fleft"
+                               actionListener="#{tdcto.prevPage}"
+                               update=":ctoForm:tdaccordian"  process="@this"/>
 
-            <p:commandLink styleClass="UI-nextButtonFA Fright UI-tcmButton"
-                           actionListener="#{tdcto.nextPage}"
-                           update=":ctoForm:tdaccordian"/>
+                <p:commandLink styleClass="UI-nextButtonFA Fright UI-tcmButton"
+                               actionListener="#{tdcto.nextPage}"
+                               update=":ctoForm:tdaccordian" process=":ctoForm:tdaccordian:accHolderTabV"/>
         </div>
         </div>
         
