--- a/tcm/modules/web/src/main/webapp/pages/custody/td/address.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/address.xhtml
@@ -175,11 +175,11 @@
                 <div class="Container100 MarTop20" style="margin: 10px 10px;">
                     <p:commandLink styleClass="UI-prevButtonFA Fleft"
                                    actionListener="#{tdcto.prevPage}"
-                                   update=":ctoForm:tdaccordian"  process="@this"/>
+                                   update=":ctoForm:tdaccordian"  process="@this" />
 
                     <p:commandLink styleClass="UI-nextButtonFA Fright UI-tcmButton"
                                    actionListener="#{tdcto.nextPage}"
-                                   update=":ctoForm:tdaccordian"  />
+                                   update=":ctoForm:tdaccordian"  process=":ctoForm:tdaccordian:addresstab" />
                 </div>
             </p:panel>
         </p:tab>
@@ -359,11 +359,11 @@
                 <div class="Container100 MarTop20" style="margin: 10px 10px;">
                     <p:commandLink styleClass="UI-prevButtonFA Fleft"
                                    actionListener="#{tdcto.prevPage}"
-                                   update=":ctoForm:tdaccordian"  process="@this"/>
+                                   update=":ctoForm:tdaccordian"  process="@this" />
 
                     <p:commandLink styleClass="UI-nextButtonFA Fright UI-tcmButton"
                                    actionListener="#{tdcto.nextPage}"
-                                   update=":ctoForm:tdaccordian"  />
+                                   update=":ctoForm:tdaccordian"  process=":ctoForm:tdaccordian:addresstab" />
                 </div>
             </p:panel>
 
