--- a/tcm/modules/web/src/main/webapp/pages/custody/td/employment.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/employment.xhtml
@@ -191,7 +191,7 @@
                            update=":ctoForm:tdaccordian"  process="@this"/>
 
             <p:commandLink styleClass="UI-nextButtonFA Fright UI-tcmButton"
-                           actionListener="#{tdcto.nextPage}"
+                           actionListener="#{tdcto.nextPage}" process=":ctoForm:tdaccordian:employmenttab"
                            update=":ctoForm:tdaccordian"/>
         </div>
         </div>
@@ -355,13 +355,13 @@
 
                 </p:panel>
     <div class="Container100 MarTop20" style="margin: 10px 10px;">
-                <p:commandLink styleClass="UI-prevButtonFA Fleft"
-                               actionListener="#{tdcto.prevPage}"
-                               update=":ctoForm:tdaccordian"  process="@this"/>
+        <p:commandLink styleClass="UI-prevButtonFA Fleft"
+                       actionListener="#{tdcto.prevPage}"
+                       update=":ctoForm:tdaccordian"  process="@this"/>
 
-                <p:commandLink styleClass="UI-nextButtonFA Fright UI-tcmButton"
-                               actionListener="#{tdcto.nextPage}"
-                               update=":ctoForm:tdaccordian"/>
+        <p:commandLink styleClass="UI-nextButtonFA Fright UI-tcmButton"
+                       actionListener="#{tdcto.nextPage}" process=":ctoForm:tdaccordian:employmenttab"
+                       update=":ctoForm:tdaccordian"/>
             </div>
             </div>
 
