--- a/tcm/modules/web/src/main/webapp/pages/custody/td/regulatory.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/regulatory.xhtml
@@ -211,7 +211,7 @@
                             update=":ctoForm:tdaccordian"  process="@this"/>
 
 						<p:commandLink styleClass="UI-nextButtonFA Fright UI-tcmButton"
-							actionListener="#{tdcto.nextPage}"
+							actionListener="#{tdcto.nextPage}" process=":ctoForm:tdaccordian:regTabV"
                             update=":ctoForm:tdaccordian" />
 					</div>
 				</p:panel>
